<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppnoMars</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <plurals name="numberOfNewArticles">
        <item quantity="one">%d new</item>
        <item quantity="other">%d new</item>
    </plurals>

    <string-array name="drawer_titles">
        <item>News feed</item>
        <item>Coupons</item>
        <item>Deals</item>
        <item>Events</item>
        <item>Locations</item>
        <!--<item>My Cart</item>-->
        <item>Shop</item>
        <item>My Profile</item>

    </string-array>

    <array name="drawer_icons">
        <item>@drawable/ic_apps</item>
        <item>@drawable/ic_sales</item>
        <item>@drawable/ic_blog</item>
        <item>@drawable/ic_bookmark</item>
        <item>@drawable/ic_community</item>
        <item>@drawable/ic_blog</item>
        <item>@drawable/ic_bookmark</item>
        <item>@drawable/ic_community</item>
    </array>

    <string-array name="footer_titles">
        <item>Settings</item>

    </string-array>

    <array name="footer_icons">
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_help</item>
    </array>

    <!--Sign UP-->
    <string name="sign_button">SIGNUP</string>
    <string name="sign_firstname">First Name</string>
    <string name="sign_lastname">Last Name</string>
    <string name="sign_sex">Sex</string>
    <string name="sign_birthday">Birth Day</string>
    <string name="sign_phone">Phone</string>
    <string name="sign_address">Address</string>
    <string name="sign_city">City</string>
    <string name="sign_postcode">Post Code</string>
    <string name="sign_country">Country</string>
    <string name="sign_username">User Name</string>
    <string name="sign_courses">Favourite courses</string>
    <string name="sign_password">Password</string>
    <string name="sign_confirm_password">Confirm Password</string>
    <string name="sign_terms">I have read and agree to the Privacy Policy</string>
    <string name="sign_login"><u>OR Login</u></string>
    <!--Sign UP Required Text-->
    <string name="req_email">Please Enter Email</string>
    <string name="req_firstname">Please Enter First Name</string>
    <string name="req_lastname">Please Enter Last Name</string>
    <string name="req_course">Please Check Courses</string>
    <string name="req_password">Please Check Password</string>
    <string name="req_confirm_password">Please Check Confirm Password</string>

    <!--User Home-->
    <string name="uh_login">Login</string>
    <string name="uh_registration">Registration</string>
    <string name="uh_skip">Skip</string>

    <!--User Login-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="btn_recoverpass">Recover Password</string>
    <string name="register_btn">REGISTER</string>
    <string name="login_forgetpassword"><u>Forgot Password ?</u></string>
    <string name="terms_service"><u>Terms of service</u></string>
    <string name="privacy_btn"><u>Privacy Policy</u></string>
    <string name="title_activity_vunue_list">VunueListActivity</string>


    <!--My Profile-->
    <string name="mp_submit">Submit</string>


    <string name="loading_text">Just a minute...</string>
    <string name="skip_button">Skip</string>
    <string name="done_button">Done</string>
    <string name="skip">Y U DO DIS TO ME?</string>

    <!--For GCM-->
<string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="title_activity_coupon_detail">CouponDetailActivity</string>

</resources>
