<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

        >

        <ImageView
            android:id="@+id/img_appicon"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lg_logowidth"
            android:background="@drawable/logo" />

        <LinearLayout
            android:id="@+id/center_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/img_appicon"
            android:alpha="0.4"
            android:background="#000"
            android:orientation="vertical">

            <EditText
                android:id="@+id/lg_email_edittext"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="#000"
                android:hint="@string/login_email"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:text="rana@appnometry.com"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor" />

            <View
                android:id="@+id/draw_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="3dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/lg_password_edittext"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="#000"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:text="12345678"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor" />


        </LinearLayout>

        <TextView
            android:id="@+id/forgetpass_textview"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/center_linear"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="right|center"
            android:text="@string/login_forgetpassword"
            android:textColor="@color/google_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/forgetpass_textview"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_btn_rounded_corner"
            android:text="@string/login_btn"
            android:textColor="@color/google_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/login_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_btn_rounded_corner"
            android:text="@string/register_btn"
            android:textColor="#5077a9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/btn_register"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView android:id="@+id/log_terms_condition"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/terms_service"
                android:textColor="@color/google_white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/log_privecy"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/privacy_btn"
                android:textColor="@color/google_white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>