<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/app_background">
        <RelativeLayout
            android:id="@+id/reg_top_relative"
            android:layout_width="match_parent"
            android:alpha="0.4"
            android:background="#000"
            android:layout_height="50dp"
            android:layout_alignParentTop="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration"
                android:textSize="20sp"
                android:textColor="@color/google_white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_top_relative"
            android:layout_marginBottom="10dp"
            android:background="@drawable/logo" />

        <LinearLayout
            android:id="@+id/center_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/banner_image"
            android:orientation="vertical">


            <EditText
                android:id="@+id/su_email"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_username"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_password"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:hint="@string/sign_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_confirmpassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:hint="@string/sign_confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor" />


            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/su_firstname"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_firstname"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_lastname"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_lastname"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_sex"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/sign_sex"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_birthday"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_birthday"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_phone"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/sign_phone"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_address"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_address"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_city"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_city"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_postcode"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_postcode"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />

            <EditText
                android:id="@+id/su_country"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_country"
                android:imeOptions="actionNext"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#929197" />


            <EditText
                android:id="@+id/su_courses"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:alpha="0.4"
                android:background="#000"
                android:ems="10"
                android:hint="@string/sign_courses"
                android:imeOptions="actionDone"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/google_white"
                android:textColorHint="@color/edtitext_hintcolor"
                android:windowSoftInputMode="stateHidden|adjustResize">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#929197" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/su_terms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:id="@+id/terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sign_terms"
                    android:textColor="@color/google_white" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/center_linear"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_btn_rounded_corner"
            android:text="@string/sign_button"
            android:textColor="@color/google_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView android:id="@+id/su_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/login_btn"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/sign_login"
            android:textColor="@color/google_white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>